k8s/stateful-blog/mysql-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-stateful
  labels:
    app: mysql
spec:
  serviceName: mysql-service
  replicas: 1
  selector:
    matchLabels:
      app: mysql

# Template helps to create pod
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image:  mysql:8.4
          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql      

          resources:
            requests:
            # cores or millicores(m)
            # 1 core = 1,000m (millicores)
              cpu: "250m"
              # The "Mi" Meaning: It represents Mebibytes 
              #  128Mi is roughly equal to 134.2 Megabytes (MB).
              memory: "512Mi"
              
            limits:
              cpu: "1"
              memory: "1Gi"
              
  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
      # volumes:
      #   - name: mysql-storage
      #     persistentVolumeClaim:
      #       claimName: mysql-pvc


        # - name: mysql-storage
        #   hostPath:
        #     path: /data/mysql
        #     type: DirectoryOrCreate

        # - name : mysql-storage
        #   emptyDir: {}

---
apiVersion: v1
kind: Service 
metadata:
  name: mysql-service

spec:
  clusterIP: None
  selector:
    app: mysql
  
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

 # Cluster IP--> within the cluster 
  # type: ClusterIP
